@@ -24,19 +24,48 @@ shift
 
 :check_AW_HOME
 @rem Define AW_HOME if not set
-if not "%AW_HOME%" == "" goto check_ANT_HOME
+if not "%AW_HOME%" == "" goto check_JAVA_HOME
 set AW_HOME=%DIRNAME%..
 echo Setting AW_HOME.  To support running the AW command more easily, to this:
 echo     set AW_HOME=%AW_HOME%
 echo     set PATH=%%AW_HOME%%\bin;%%PATH%%
 echo.
 
+:check_JAVA_HOME
+if "%JAVA_HOME%" == "" (
+    echo set up JAVA_HOME first
+    goto end
+)
+set AW_JAVA_HOME=%JAVA_HOME%
+
+set PATH=%JAVA_HOME%\bin;%PATH%
+echo Setting JAVA_HOME to: %JAVA_HOME%
+
 :check_ANT_HOME
-if not "%ANT_HOME%" == "" goto init
-set ANT_HOME=%AW_HOME%\tools\ant
+if not "%ANT_HOME%" == "" goto set_ant_path
+if exist "%AW_HOME%\tools\ant" (
+    set ANT_HOME=%AW_HOME%\tools\ant
+) else (
+    echo ant is not setup, set it first
+    goto end
+)
+:set_ant_path
 set PATH=%ANT_HOME%\bin;%PATH%
 echo Setting ANT_HOME to: %ANT_HOME%
-set ANT_OPTS=-Xmx400m  
+
+:check_ANT_OPTS
+set JAVA_VERSION_STR=
+for /f "tokens=3" %%g in ('%JAVA_HOME%\bin\java.exe -version 2^>^&1 ^| findstr /i "version"') do (
+    set JAVA_VERSION_STR=%%g
+)
+if not "%JAVA_VERSION_STR%" == "" (
+    set JAVA_VERSION_STR=%JAVA_VERSION_STR:"=%
+)
+if "%JAVA_VERSION_STR:~0,2%" == "1." (
+    set ANT_OPTS=-Xmx400m
+) else (
+    set ANT_OPTS=-Xmx400m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED
+)
 
 :init
 @rem Get command-line arguments, handling Windowz variants
